--- a/acm.html
+++ b/acm.html
@@ -380,6 +380,7 @@
                                     </h2>
                                     <div id="basicTopic3" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
                                         <div class="accordion-body">
+                                            <p><a href="acm_basicTopic3.html">Опис</a> | <a href="#">Різне</a></p>	
                                             <div class="accordion" id="basicTopic3Lectures">
                                                 <div class="accordion-item">
                                                     <h2 class="accordion-header">
@@ -413,6 +414,7 @@
                                     </h2>
                                     <div id="basicTopic4" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
                                         <div class="accordion-body">
+                                            <p><a href="acm_basicTopic4.html">Опис</a> | <a href="#">Різне</a></p>	
                                             <div class="accordion" id="basicTopic4Lectures">
 <!-- TODO -->
                                             </div>
@@ -427,6 +429,7 @@
                                     </h2>
                                     <div id="basicTopic5" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
                                         <div class="accordion-body">
+                                            <p><a href="acm_basicTopic5.html">Опис</a> | <a href="#">Різне</a></p>	
                                             <div class="accordion" id="basicTopic5Lectures">
 <!-- TODO -->
                                             </div>
@@ -441,6 +444,7 @@
                                     </h2>
                                     <div id="basicTopic6" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
                                         <div class="accordion-body">
+                                            <p><a href="acm_basicTopic6.html">Опис</a> | <a href="#">Різне</a></p>	
                                             <div class="accordion" id="basicTopic6Lectures">
 <!-- TODO -->
                                             </div>
