--- a/acm.html
+++ b/acm.html
@@ -251,6 +251,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#hw_">...</button></h2>
+                    <div id="hw_" class="accordion-collapse collapse" data-bs-parent="#lecHomeworksAccordion">
+                        <div class="accordion-body">	
+                                           <i>Інші завдання додаватимуться в процесі вивчення дисципліни</i>		
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 		
@@ -274,6 +282,14 @@
                         Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/ct/ct/acm2025ExampleForCT2.pdf">Приклад виконання(відкрити на GitHub)</a>
 						      | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/ct/ct/acm2025ExampleForCT2.pdf">Приклад виконання(скачати)</a></b>
 						      | <b>Відомості стосовно завдання розглядаються безпосередньо на лекції, а виконання завдання здійснюється у письмовій формі наприкінці лекції</b>							  
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lecTask_">...</button></h2>
+                    <div id="lecTask_" class="accordion-collapse collapse" data-bs-parent="#lecHomeworksAccordion">
+                        <div class="accordion-body">	
+                                           <i>Інші завдання додаватимуться в процесі вивчення дисципліни</i>		
                         </div>
                     </div>
                 </div>
@@ -493,6 +509,7 @@
                                     </h2>
                                     <div id="additionalTopic8" class="accordion-collapse collapse" data-bs-parent="#additionalLecturesAccordion">
                                         <div class="accordion-body">
+                                            <p><a href="acm_additionalTopic8.html">Опис</a> | <a href="#">Різне</a></p>
                                             <div class="accordion" id="additionalTopic8Lectures">
 <!-- TODO -->
                                             </div>
