--- a/acm_basicTopic1.html
+++ b/acm_basicTopic1.html
@@ -49,120 +49,250 @@
 	
 
         <section id="lectures" class="mt-4">
-		
-		
 <h3>Частина 1. Тема №1. Вступ до теорії алгоритмів</h3>
 <br>			
-1.1. Неформальне тлумачення алгоритму. 
-<br>
-1.1.1. Історія поняття алгоритму.
-<br>
-1.1.2. Визначення алгоритму.
-<br>
-1.1.3. Основні властивості алгоритму. 
-<br>
-1.1.4. Параметри алгоритму.
-<br>
-1.1.5. Базові структури алгоритмів(алгоритмічні конструкції). Теорема Бьома-Якопіні.
-<br>
-1.1.6. Рекурсивні алгоритми.
-<br>
-1.1.7. Паралельні алгоритми.
-<br>
-1.1.8. Недетерміновані алгоритми.
-<br>
-1.1.9. Імовірнісні алгоритми(Probabilistic algorithms).
-<br>
-1.2. Формалізація поняття алгоритму.
-<br>
-<i>(продовження в частині курсу, яка присвячена моделям обчислень(тема №6))</i>
-<br>
-1.2.1. Введення в теорію алгоритмів.
-<br>
-1.2.2. Абстрактні моделі алгоритму.
-<br>
-1.2.3. Формальні алгоритмічні системи(ФАС).
-<br>
-1.2.4. Скінченний автомат.
-<br>
-1.2.4.1. Детермінований скінченний автомат(DFA).
-<br>
-1.2.4.2. Недетермінований скінченний автомат(NFA) та імовірнісний автомат(PA).
-<br>
-1.2.4.3. ω-автомат.
-<br>
-1.2.4.4. Автомат з однобуквеними переходами. Формування автомату з однобуквеними переходами за заданим недетермінованим автоматом.
-<br>
-1.2.4.5. Видалення непродуктивних та недосяжних станів скінченного автомату.
-<br>
-1.3.4.6. Видалення λ-переходів та ε-переходів у недетермінованому скінченному автоматі.
-<br>
-1.3.4.7. Детермінізація квазідетермінованого скінченного автомату.
-<br>
-1.3.4.8. Мінімізація скінченого детермінованого автомату.
-<br>
-1.2.5. Перетворювачі(трансдуктори) на основі детермінованого скінченного автомату.
-<br>
-1.2.5.1. Автомат Мура(Moore machine).
-<br>
-1.2.5.2. Автомат Мілі(Mealy machine).
-<br>
-1.2.6. Автомат з магазинною пам'яттю(МП-автомат, PDA).
-<br>
-1.2.7. Машина Тюрінга та її варіанти.
-<br>
-1.2.8. Числення Поста.
-<br>
-1.2.9. Нормальні алгоритми Маркова.
-<br>
-1.2.10. Регістрова машина.
-<br>
-1.2.11. РАМ-машина.
-<br>
-1.2.12. ПРАМ-машина та варіанти пам’яті із впорядкованим доступом.
-<br>
-1.3. Формальні граматики та формальні мови.
-<br>
-1.3.1. Формальні граматики, мови та ієрархія Чьомскі.
-<br>
-1.3.2. Регулярні мови та вирази.
-<br>
-1.3.2.1. Властивості граматик регулярних мов. Автоматні граматики. Доповнення автоматної мови.
-<br>
-1.3.2.2. Лема про накачку для регулярних мов.
-<br>
-1.3.2.3. Знаходження мови для заданої регулярної граматики.
-<br>
-1.3.2.4. Регулярні вирази.
-<br>
-1.3.2.5. Формування регулярного виразу для заданого недетермінованого скінченного автомату.
-<br>
-1.3.2.6. Формування недетермінованого скінченного автомату для заданої регулярної граматики.
-<br>
-1.3.2.7. Формування недетермінованого скінченного автомату для заданого регулярного виразу.
-<br>
-1.3.3. КВ-мови(контекстно-вільні мови) та нотації БНФ.
-<br>
-1.3.3.1. Властивості граматик КВ-мов.
-<br>
-1.3.3.2. Лема про накачку для КВ-мов.
-<br>
-1.3.3.3. Дерева розбору КВ-граматик.
-<br>
-1.3.3.4. Створення МП-автомату для заданої КВ-граматики.
-<br>
-1.3.3.5. Нотації БНФ та РБНФ.
-<br>
-1.3.3.6. Нормальна форма Хомського для КВ-граматик.
-<br>
-1.3.3.7. Алгоритм Кока-Касамі-Янгера для КВ-граматик у нормальній формі Хомського.
-<br>
-1.4. Формалізація поняття алгоритму.(доповнення)
-<br>
-1.4.1. Детермінізація недетермінованого скінченного автомату.
-			
+<div class=WordSection1>
 
-			
+<p class=MsoNormal style='line-height:normal;layout-grid-mode:char'><b><i><span
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.1.
+Неформальне тлумачення алгоритму. </span></i></b></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.1.1.
+Історія поняття алгоритму. </span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.1.2.
+Визначення алгоритму. </span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.1.3.
+Основні властивості алгоритму. </span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.1.4.
+Параметри алгоритму. </span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.1.5.
+Базові структури алгоритмів<i>(алгоритмічні конструкції)</i>. Теорема
+Бьома-Якопіні. </span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.1.6.
+Рекурсивні алгоритми.</span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.1.7.
+Паралельні алгоритми.</span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.1.8.
+Недетерміновані алгоритми.</span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.1.9.
+Імовірнісні алгоритми<i>(</i></span><i><span lang=EN-US style='font-size:14.0pt;
+font-family:"Times New Roman",serif'>Probabilistic</span></i><i><span
+lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif'> </span></i><i><span
+lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif'>algorithms</span></i><i><span
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>)</span></i><span
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>.</span></p>
+
+<p class=MsoNormal style='margin-left:1.7pt;line-height:normal;layout-grid-mode:
+char'><b><i><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.
+Формалізація поняття алгоритму. </span></i></b></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><i><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>(продовження
+в частині курсу, яка присвячена моделям обчислень(тема №6))</span></i></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.1.
+Введення в теорію алгоритмів.</span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.2.
+Абстрактні моделі алгоритму.</span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.3.
+Формальні алгоритмічні системи<i>(ФАС)</i>.</span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.4.
+Скінченний автомат.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.4.1.
+Детермінований скінченний автомат<i>(DFA)</i>.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.4.2.
+Недетермінований скінченний автомат<i>(NFA)</i> та імовірнісний автомат<i>(PA)</i>.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.4.3.
+&#969;-автомат.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.4.4.
+Автомат з однобуквеними переходами. Формування автомату з однобуквеними
+переходами за заданим недетермінованим автоматом.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.4.5.
+Видалення непродуктивних та недосяжних станів скінченного автомату.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.4.6.
+Видалення &#955;-переходів та &#949;-переходів у недетермінованому скінченному
+автоматі.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.4.7.
+Детермінізація квазідетермінованого скінченного автомату.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.4.8.
+Мінімізація скінченого детермінованого автомату.</span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.5.
+Перетворювачі<i>(трансдуктори)</i> на основі детермінованого скінченного
+автомату.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.5.1.
+Автомат Мура<i>(</i></span><i><span lang=EN-US style='font-size:14.0pt;
+font-family:"Times New Roman",serif'>Moore machine</span></i><i><span lang=UK
+style='font-size:14.0pt;font-family:"Times New Roman",serif'>)</span></i><span
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.5.2.
+Автомат Мілі<i>(</i></span><i><span lang=EN-US style='font-size:14.0pt;
+font-family:"Times New Roman",serif'>Mealy machine</span></i><i><span lang=UK
+style='font-size:14.0pt;font-family:"Times New Roman",serif'>)</span></i><span
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>.</span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.6.
+Автомат з магазинною пам'яттю<i>(МП-автомат, PDA)</i>.</span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.7.
+Машина Тюрінга та її варіанти.</span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.8.
+Числення Поста.</span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.9.
+Нормальні алгоритми Маркова.</span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.10.
+Регістрова машина.</span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.11.
+РАМ-машина.</span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.2.12.
+ПРАМ-машина та варіанти пам’яті із впорядкованим доступом.</span></p>
+
+<p class=MsoNormal style='margin-left:1.7pt;line-height:normal;layout-grid-mode:
+char'><b><i><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.
+Формальні граматики та формальні мови.</span></i></b><b><span lang=UK
+style='font-size:14.0pt;font-family:"Times New Roman",serif'> </span></b></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.1.
+Формальні граматики, мови та ієрархія Чьомскі. </span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.2.
+Регулярні мови та вирази.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.2.1.
+Властивості граматик регулярних мов. Автоматні граматики. Доповнення автоматної
+мови.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.2.2.
+Лема про накачку для регулярних мов.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.2.3.
+Знаходження мови для заданої регулярної граматики.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.2.4.
+Регулярні вирази.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.2.5.
+Формування регулярного виразу для заданого недетермінованого скінченного
+автомату.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.2.6.
+Формування недетермінованого скінченного автомату для заданої регулярної
+граматики.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.2.7.
+Формування недетермінованого скінченного автомату для заданого регулярного
+виразу.</span></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.3.
+КВ-мови<i>(контекстно-вільні мови)</i> та нотації БНФ.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.3.1.
+Властивості граматик КВ-мов.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.3.2.
+Лема про накачку для КВ-мов.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.3.3.
+Дерева розбору КВ-граматик.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.3.4.
+Створення МП-автомату для заданої КВ-граматики.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.3.5.
+Нотації БНФ та РБНФ.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.3.6.
+Нормальна форма Хомського для КВ-граматик.</span></p>
+
+<p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.3.3.7.
+Алгоритм Кока-Касамі-Янгера для КВ-граматик у нормальній формі Хомського.</span></p>
+
+<p class=MsoNormal style='line-height:normal;layout-grid-mode:char'><b><i><span
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.4.
+Формалізація поняття алгоритму.(доповнення)</span></i></b></p>
+
+<p class=MsoNormal style='margin-left:35.4pt;line-height:normal'><span lang=UK
+style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.4.1.
+Детермінізація недетермінованого скінченного автомату.</span></p>
+
+<p class=MsoNormal>&nbsp;</p>
+
+</div>
+
         </section>
 		
 <!--         <section id="back_section_2">
