--- a/acm_basicTopic2.html
+++ b/acm_basicTopic2.html
@@ -49,7 +49,8 @@
 	
 
         <section id="lectures" class="mt-4">
-		
+<h3>Частина 1. Тема №2. Основи аналізу алгоритмів</h3>
+<br>			
 <div class=WordSection1>
 
 <p class=MsoNormal style='line-height:normal;layout-grid-mode:char'><b><i><span
