--- a/cscad.html
+++ b/cscad.html
@@ -44,7 +44,8 @@
                                         <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicTopic1BasicTopic2">Теми №1 та №2. Вступ до дисципліни. Основи систем автоматизованого проектування</button>
                                     </h2>
                                     <div id="basicTopic1BasicTopic2" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
-                                        <div class="accordion-body">									
+                                        <div class="accordion-body">
+                                            <p><a href="cscad_basicTopic1_basicTopic2.html">Опис</a> | <a href="#">Різне</a></p>										
                                             <div class="accordion" id="basicTopic1Lectures">
                                                 <div class="accordion-item">
                                                     <h2 class="accordion-header">
@@ -78,6 +79,7 @@
                                     </h2>
                                     <div id="basicTopic3" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
                                         <div class="accordion-body">
+                                            <p><a href="cscad_basicTopic3.html">Опис</a> | <a href="#">Різне</a></p>
                                             <div class="accordion" id="basicTopic2Lectures">
                                                 <div class="accordion-item">
                                                     <h2 class="accordion-header">
@@ -149,6 +151,7 @@
                                     </h2>
                                     <div id="basicTopic5" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
                                         <div class="accordion-body">
+                                            <p><a href="cscad_basicTopic5.html">Опис</a> | <a href="#">Різне</a></p>
                                             <div class="accordion" id="basicTopic5Lectures">
 <!-- TODO -->
                                             </div>
@@ -163,6 +166,7 @@
                                     </h2>
                                     <div id="basicTopic6" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
                                         <div class="accordion-body">
+                                            <p><a href="cscad_basicTopic6.html">Опис</a> | <a href="#">Різне</a></p>
                                             <div class="accordion" id="basicTopic6Lectures">
 <!-- TODO -->
                                             </div>
