--- a/cscad.html
+++ b/cscad.html
@@ -46,7 +46,7 @@
                                     <div id="basicTopic1BasicTopic2" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
                                         <div class="accordion-body">
                                             <p><a href="cscad_basicTopic1_basicTopic2.html">Опис</a> | <a href="#">Різне</a></p>										
-                                            <div class="accordion" id="basicTopic1Lectures">
+                                            <div class="accordion" id="basicTopic1basicTopic2Lectures">
                                                 <div class="accordion-item">
                                                     <h2 class="accordion-header">
                                                         <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicLecture1">Лекція 1</button>
@@ -80,7 +80,7 @@
                                     <div id="basicTopic3" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
                                         <div class="accordion-body">
                                             <p><a href="cscad_basicTopic3.html">Опис</a> | <a href="#">Різне</a></p>
-                                            <div class="accordion" id="basicTopic2Lectures">
+                                            <div class="accordion" id="basicTopic3Lectures">
                                                 <div class="accordion-item">
                                                     <h2 class="accordion-header">
                                                         <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicLecture3">Лекція 3</button>
