--- a/acm.html
+++ b/acm.html
@@ -68,6 +68,22 @@
         <section id="update_state">
             <h2><i>Увага! Курс перебуває в стані оновлення, більшість матеріалів поки відсутні.</i></h2>
         </section>
+
+        <section id="general" class="mt-4">
+            <h2>Загальне</h2>
+            <div class="accordion" id="general">
+                <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#annotationAndRecommendedReading">Анотація курсу та список рекомендованої літератури</button></h2>
+                    <div id="annotationAndRecommendedReading" class="accordion-collapse collapse" data-bs-parent="#general">
+                        <div class="accordion-body">
+                             <p><a href="acm_annotationAndRecommendedReading.html#annotation">Анотація</a> | <a href="acm_annotationAndRecommendedReading.html#recommendedReading">Список рекомендованої літератури</a></p>							  
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+		
+		<br/> <!--?-->
 	
         <section id="labs">
             <h2>Лабораторні заняття</h2>
@@ -92,8 +108,8 @@
                     <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab2">Лабораторна робота №2</button></h2>
                     <div id="lab2" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
-                                              Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab2/acmLab2.pdf">Відомості та завдання(відкрити на GitHub)</a>
-						                            | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab2/acmLab2.pdf">Відомості та завдання(скачати)</a></b>
+                                           Матеріали: <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab2/acmLab2.pdf">Відомості та завдання(відкрити на GitHub)</a>
+						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab2/acmLab2.pdf">Відомості та завдання(скачати)</a></b>
 						                            | <a href="https://github.com/KozakNazar/srcacmlab2/blob/master/acmlab2.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
 					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab2/master/acmlab2.cpp', 'acmlab2.cpp'); return false;">Зразок коду одним файлом*(скачати)</a></b>
                         </div>
