--- a/cscad.html
+++ b/cscad.html
@@ -41,17 +41,17 @@
                                 
 								<div class="accordion-item">
                                     <h2 class="accordion-header">
-                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicTopic1BasicTopic2">Теми №1 та №2. Вступ до дисципліни. Основи систем автоматизованого проектування</button>
+                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicTopic1And2">Теми №1 та №2. Вступ до дисципліни. Основи систем автоматизованого проектування</button>
                                     </h2>
-                                    <div id="basicTopic1BasicTopic2" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
+                                    <div id="basicTopic1And2" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
                                         <div class="accordion-body">
                                             <p><a href="cscad_basicTopic1_basicTopic2.html">Опис</a> | <a href="#">Різне</a></p>										
-                                            <div class="accordion" id="basicTopic1basicTopic2Lectures">
+                                            <div class="accordion" id="basicTopic1And2Lectures">
                                                 <div class="accordion-item">
                                                     <h2 class="accordion-header">
                                                         <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicLecture1">Лекція 1</button>
                                                     </h2>
-                                                    <div id="basicLecture1" class="accordion-collapse collapse" data-bs-parent="#basicTopic1BasicTopic2Lectures">
+                                                    <div id="basicLecture1" class="accordion-collapse collapse" data-bs-parent="#basicTopic1And2Lectures">
                                                         <div class="accordion-body">
                                                             <a href="#">Матеріали</a>
                                                         </div>
@@ -61,7 +61,7 @@
                                                     <h2 class="accordion-header">
                                                         <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicLecture2">Лекція 2</button>
                                                     </h2>
-                                                    <div id="basicLecture2" class="accordion-collapse collapse" data-bs-parent="#basicTopic1BasicTopic2Lectures">
+                                                    <div id="basicLecture2" class="accordion-collapse collapse" data-bs-parent="#basicTopic1And2Lectures">
                                                         <div class="accordion-body">
                                                             <a href="#">Матеріали</a>
                                                         </div>
