--- a/acm.html
+++ b/acm.html
@@ -472,7 +472,7 @@
 								
 								<div class="accordion-item">
                                     <h2 class="accordion-header">
-                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicTopic6">Частина 2. Тема 6. Моделі обчислень</button>
+                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicTopic6">Частина 2. Тема №6. Моделі обчислень</button>
                                     </h2>
                                     <div id="basicTopic6" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
                                         <div class="accordion-body">
