--- a/acm_additionalTopic8.html
+++ b/acm_additionalTopic8.html
@@ -54,198 +54,198 @@
 <div class=WordSection1>
 
 <p class=MsoNormal style='margin-left:1.7pt;line-height:normal;layout-grid-mode:
-char'><b><i><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.1.
+char'><b><i><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.1.
 Базові поняття.</span></i></b></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.1.1.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.1.1.
 Деякі суміжні поняття з фізики елементарних частин. </span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.1.2.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.1.2.
 Суперпозиція квантових станів. </span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.1.3.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.1.3.
 Кубіти.</span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.1.3.1.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.1.3.1.
 Поняття кубіту. </span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.1.3.2.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.1.3.2.
 Представлення кубіта на сфері Блоха. </span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.1.3.3.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.1.3.3.
 Вимірювання значень кубітів.</span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.1.3.4.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.1.3.4.
 Керування станом кубіта: осциляція Рабі. </span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.1.4.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.1.4.
 Теорема про неможливість клонування квантових станів<i>(No-cloning theorem)</i>.</span></p>
 
 <p class=MsoNormal style='margin-left:1.7pt;line-height:normal;layout-grid-mode:
-char'><b><i><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.2.
+char'><b><i><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.2.
 Квантові вентилі та квантові регістри.</span></i></b></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.2.1.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.2.1.
 Система кубітів та квантова сплутаність. </span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.2.1.1.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.2.1.1.
 Способи генерації сплутаних станів. </span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.2.1.2.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.2.1.2.
 Теорема про заборону комунікації<i>(</i></span><i><span lang=EN-US
-style='font-size:18.0pt;font-family:"Times New Roman",serif'>No</span></i><i><span
-lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>-</span></i><i><span
-lang=EN-US style='font-size:18.0pt;font-family:"Times New Roman",serif'>communication</span></i><i><span
-lang=EN-US style='font-size:18.0pt;font-family:"Times New Roman",serif'> </span></i><i><span
-lang=EN-US style='font-size:18.0pt;font-family:"Times New Roman",serif'>theorem</span></i><i><span
-lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>)</span></i><span
-lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>. </span></p>
+style='font-size:14.0pt;font-family:"Times New Roman",serif'>No</span></i><i><span
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>-</span></i><i><span
+lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif'>communication</span></i><i><span
+lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif'> </span></i><i><span
+lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif'>theorem</span></i><i><span
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>)</span></i><span
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>. </span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.2.2.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.2.2.
 Вентиль тотожного перетворення. </span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.2.3.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.2.3.
 Вентиль заперечення<i>(вентиль Паулі </i></span><i><span lang=EN-US
-style='font-size:18.0pt;font-family:"Times New Roman",serif'>X</span></i><i><span
-lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>)</span></i><span
-lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>. </span></p>
+style='font-size:14.0pt;font-family:"Times New Roman",serif'>X</span></i><i><span
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>)</span></i><span
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>. </span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.2.4.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.2.4.
 Вентиль фазового зміщення<i>(вентиль Паулі </i></span><i><span lang=EN-US
-style='font-size:18.0pt;font-family:"Times New Roman",serif'>Z</span></i><i><span
-lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>)</span></i><span
-lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>.  </span></p>
+style='font-size:14.0pt;font-family:"Times New Roman",serif'>Z</span></i><i><span
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>)</span></i><span
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>.  </span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.2.5.
-Вентиль Паулі </span><span lang=EN-US style='font-size:18.0pt;font-family:"Times New Roman",serif'>Y</span><span
-lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>. </span></p>
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.2.5.
+Вентиль Паулі </span><span lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif'>Y</span><span
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>. </span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.2.6.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.2.6.
 Вентиль перетворення Адамара. </span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.2.7.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.2.7.
 Прямий керуючий вентиль. </span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.2.8.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.2.8.
 Вентиль контрольованого заперечення. </span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.2.9.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.2.9.
 Вентиль обміну. </span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.2.10.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.2.10.
 Вентиль Тоффолі. </span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.2.11.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.2.11.
 Вентиль Фредкіна.</span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.2.12.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.2.12.
 Деякі інші квантові вентилі.</span></p>
 
 <p class=MsoNormal style='line-height:normal;layout-grid-mode:char'><b><i><span
-lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.3.
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.3.
 Квантові обчислення.</span></i></b></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.3.1.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.3.1.
 Квантова комбінаційна схема. </span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.3.2.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.3.2.
 Квантовий скінченний автомат. </span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.3.3.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.3.3.
 Квантова машина Тюрінга. </span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.3.4.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.3.4.
 Деякі спеціальні форми квантових обчислень.</span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.3.4.1.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.3.4.1.
 Адіабатичні квантові обчислення. </span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.3.4.2.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.3.4.2.
 Однобічний квантовий комп'ютер. </span></p>
 
 <p class=MsoNormal style='line-height:normal;layout-grid-mode:char'><b><i><span
-lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.4.
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.4.
 Важливі алгоритми квантових обчислень. </span></i></b></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.4.1.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.4.1.
 Задача та алгоритм Дойча-Джозі. </span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.4.2.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.4.2.
 Задача та алгоритм Бернштайна-Вазірані.</span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.4.3.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.4.3.
 Задача Саймона.</span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.4.4.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.4.4.
 Алгоритм Шора. </span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.4.5.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.4.5.
 Алгоритм Гровера.</span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.4.6.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.4.6.
 Квантовий відпал.</span></p>
 
 <p class=MsoNormal style='line-height:normal;layout-grid-mode:char'><b><i><span
-lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.</span></i></b><b><i><span
-style='font-size:18.0pt;font-family:"Times New Roman",serif'>5</span></i></b><b><i><span
-lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>. Засоби
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.</span></i></b><b><i><span
+style='font-size:14.0pt;font-family:"Times New Roman",serif'>5</span></i></b><b><i><span
+lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>. Засоби
 квантових обчислень. </span></i></b></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.5.1.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.5.1.
 Програмний каркас Qiskit. </span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.5.1.1.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.5.1.1.
 Загальний огляд Qiskit. </span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.5.1.2.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.5.1.2.
 Мова проміжного рівня OpenQASM для представлення квантових інструкцій.</span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
-char'><span lang=UK style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.5.1.3.
+char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.5.1.3.
 Платформа IBM Quantum Experience.</span></p>
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal'><span lang=UK
-style='font-size:18.0pt;font-family:"Times New Roman",serif'>7.5.2. Огляд інших
+style='font-size:14.0pt;font-family:"Times New Roman",serif'>7.5.2. Огляд інших
 засобів квантових обчислень.</span></p>
 
-<p class=MsoNormal>&nbsp;</p>
+<p class=MsoNormal><span style='font-size:9.0pt;line-height:107%'>&nbsp;</span></p>
 
 </div>
 
