--- a/acm_basicTopic6.html
+++ b/acm_basicTopic6.html
@@ -49,7 +49,7 @@
 	
 
         <section id="lectures" class="mt-4">
-<h3>Частина 2. Тема 6. Моделі обчислень</h3>
+<h3>Частина 2. Тема №6. Моделі обчислень</h3>
 <br>		
 <div class=WordSection1>
 
