--- a/cscad.html
+++ b/cscad.html
@@ -18,6 +18,17 @@
 
     <div class="container mt-4">
 
+<!--         <section id="update_state">
+            <h2 class="accordion-header">
+                <button class="accordion-button" style="background-color: #cce5ff; color: #003366; border: 1px solid #007bff;" type="button" onclick="goBack()"><h3 class="fs-5">Назад</h3></button>
+            </h2>
+        </section> -->
+	
+        <section id="back_section_1">
+            <h2 class="accordion-header">
+                <button class="accordion-button" style="background-color: #cce5ff; color: #003366;" type="button" onclick="goBack()"><h3 class="fs-5">Назад</h3></button>
+            </h2>
+        </section>
 	
         <section id="update_state">
             <h2>Увага! Курс перебуває в стані оновлення, більшість матеріалів поки відсутні.</h2>
@@ -185,8 +196,19 @@
 			
         </section>
 		
+		<br/>
 		
-		
+<!--         <section id="update_state">
+            <h2 class="accordion-header">
+                <button class="accordion-button" style="background-color: #cce5ff; color: #003366; border: 1px solid #007bff;" type="button" onclick="goBack()"><h3 class="fs-5">Назад</h3></button>
+            </h2>
+        </section> -->
+	
+        <section id="back_section_1">
+            <h2 class="accordion-header">
+                <button class="accordion-button" style="background-color: #cce5ff; color: #003366;" type="button" onclick="goBack()"><h3 class="fs-5">Назад</h3></button>
+            </h2>
+        </section>
 		
 		
     </div>
