--- a/acm_basicTopic6.html
+++ b/acm_basicTopic6.html
@@ -50,7 +50,9 @@
 
         <section id="lectures" class="mt-4">
 <h3>Частина 2. Тема №6. Моделі обчислень</h3>
-<br>		
+<i>Тут не розглядаються формальні мови та відповідні їм моделі автоматів. Формальні мови та відповідні їм моделі автоматів розглядаються в темі №1. Тут також не розглядаються великі мовні моделі(LLM). LLM(англ. large language model) розглядаються в темі №10(додаткова частина курсу).</i>
+<br>
+<br>			
 <div class=WordSection1>
 
 <p class=MsoNormal style='margin-left:1.7pt;line-height:normal;layout-grid-mode:
