--- a/acm_additionalTopic8.html
+++ b/acm_additionalTopic8.html
@@ -49,7 +49,7 @@
 	
 
         <section id="lectures" class="mt-4">
-<h3>Частина 4(додаткова). Тема №8. Квантові обчислення</h3>
+<h3>Частина 4(додаткова). Тема 8. Квантові обчислення</h3>
 <br>			
 <div class=WordSection1>
 
