--- a/acm_basicTopic1.html
+++ b/acm_basicTopic1.html
@@ -49,7 +49,7 @@
 	
 
         <section id="lectures" class="mt-4">
-<h3>Частина 1. Тема №1. Вступ до теорії алгоритмів</h3>
+<h3>Частина 1. Тема 1. Вступ до теорії алгоритмів</h3>
 <br>			
 <div class=WordSection1>
 
