--- a/acm_basicTopic4.html
+++ b/acm_basicTopic4.html
@@ -49,7 +49,7 @@
 	
 
         <section id="lectures" class="mt-4">
-<h3>Частина 1. Тема №4. Базові алгоритми обробки інформації</h3>
+<h3>Частина 1. Тема 4. Базові алгоритми обробки інформації</h3>
 <br>		
 <div class=WordSection1>
 
