--- a/acm_basicTopic5.html
+++ b/acm_basicTopic5.html
@@ -49,7 +49,7 @@
 	
 
         <section id="lectures" class="mt-4">
-<h3>Частина 1. Тема №5. Бібліотеки основних алгоритмів обробки інформації для популярних мов програмування</h3>
+<h3>Частина 1. Тема 5. Бібліотеки основних алгоритмів обробки інформації для популярних мов програмування</h3>
 <br>		
 <div class=WordSection1>
 
