--- a/acm_basicTopic1.html
+++ b/acm_basicTopic1.html
@@ -287,7 +287,7 @@ lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.4.
 
 <p class=MsoNormal style='margin-left:35.4pt;line-height:normal'><span lang=UK
 style='font-size:14.0pt;font-family:"Times New Roman",serif'>1.4.1.
-Детермінізація недетермінованого скінченного автомату.</span></p>
+Детермінізація довільного недетермінованого скінченного автомату.</span></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
