--- a/acm_basicTopic3.html
+++ b/acm_basicTopic3.html
@@ -187,7 +187,7 @@ char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>3.2.6.1.
-Поняття Абстрактоного типу даних. Контейнери та колекції.</span></p>
+Поняття абстрактного типу даних. Контейнери та колекції.</span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>3.2.6.2.
@@ -231,7 +231,7 @@ char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
 char'><span lang=UK style='font-size:14.0pt;font-family:"Times New Roman",serif'>3.2.8.2.
-Одно- та двобічнозв'язні списки. Список з пропусками. Розгорнутий зв'язаний
+Одно- та двобічно зв'язні списки. Список з пропусками. Розгорнутий зв'язаний
 список.</span></p>
 
 <p class=MsoNormal style='margin-left:70.8pt;line-height:normal;layout-grid-mode:
