--- a/acm.html
+++ b/acm.html
@@ -268,6 +268,16 @@
                     </div>
                 </div>
                 <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#hw3">Лекційне домашнє завдання №3</button></h2>
+                    <div id="hw3" class="accordion-collapse collapse" data-bs-parent="#lecHomeworksAccordion">
+                        <div class="accordion-body">	
+                                           Матеріали: <b>Завдання додане після наступного заняття</b>
+						                            | <a href="https://github.com/KozakNazar/srcacmhw3/blob/master/acmhw3.c">Зразок коду одним файлом*(відкрити на GitHub)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw3/blob/master/acmhw3.cpp', 'acmhw3.cpp'); return false;">Зразок коду одним файлом*(скачати)</a></b>		
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
                     <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#hw_">...</button></h2>
                     <div id="hw_" class="accordion-collapse collapse" data-bs-parent="#lecHomeworksAccordion">
                         <div class="accordion-body">	
@@ -281,6 +291,7 @@
         <section id="lecTasks" class="mt-4">
             <h2>Лекційні контрольні завдання</h2>
             <div class="accordion" id="lecTasksAccordion">
+		        <!--
                 <div class="accordion-item">
                     <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lecTask1">Лекційне контрольне завдання №1</button></h2>
                     <div id="lecTask1" class="accordion-collapse collapse" data-bs-parent="#lecTasksAccordion">
@@ -301,11 +312,12 @@
                         </div>
                     </div>
                 </div>
+                -->
                 <div class="accordion-item">
                     <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lecTask_">...</button></h2>
                     <div id="lecTask_" class="accordion-collapse collapse" data-bs-parent="#lecHomeworksAccordion">
                         <div class="accordion-body">	
-                                           <i>Інші завдання додаватимуться в процесі вивчення дисципліни</i>		
+                                           <i>Завдання додаватимуться в процесі вивчення дисципліни</i>		
                         </div>
                     </div>
                 </div>
