--- a/acm.html
+++ b/acm.html
@@ -271,7 +271,7 @@
                     <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#hw3">Лекційне домашнє завдання №3</button></h2>
                     <div id="hw3" class="accordion-collapse collapse" data-bs-parent="#lecHomeworksAccordion">
                         <div class="accordion-body">	
-                                           Матеріали: <b>Завдання додане після наступного заняття</b>
+                                           Матеріали: <b>Завдання буде додане після наступного заняття</b>
 						                            | <a href="https://github.com/KozakNazar/srcacmhw3/blob/master/acmhw3.c">Зразок коду одним файлом*(відкрити на GitHub)</a>
 					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmhw3/blob/master/acmhw3.cpp', 'acmhw3.cpp'); return false;">Зразок коду одним файлом*(скачати)</a></b>		
                         </div>
